namespace java ru.nkz.ivcgzo.thriftGenTalon

include "../../../common/thrift/classifier.thrift"
include "../../../common/thrift/kmiacServer.thrift"

service ThriftGenTalons extends kmiacServer.KmiacServer {
}
